# ESP32_Arduino_Lib_Builder

./: .gitignore  README.md  build_package.sh  build_s3_package.sh  seed_from_local.sh
components/arduino_tinyusb/: CMakeLists.txt
configs/: builds.json  defconfig.common  defconfig.esp32  defconfig.esp32s3  defconfig.esp32s3_tls13_custom  defconfig.esp32u
reports/: config_status_report.md  diff_raw.txt  unexpected_diff_report.md  version_parity_report.md
tools/: archive-build.sh  config.sh  gen_pio_lib_manifest.py  install-arduino.sh  update-components.sh
